--- a/bankaccount_1/build.gradle
+++ b/bankaccount_1/build.gradle
@@ -23,7 +23,7 @@ repositories {
 }
 
 dependencies {
-	
+	 
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
@@ -41,10 +41,11 @@ dependencies {
 	implementation 'org.modelmapper:modelmapper:3.2.0'
 
 	implementation 'org.mindrot:jbcrypt:0.4'
-
-	implementation 'com.google.code.gson:gson:2.8.9'
+	//implementation 'com.google.code.gson:gson:2.8.9'
 	implementation 'com.jayway.jsonpath:json-path-assert:2.6.0'
-
+	implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-jasper', version: '10.1.17'
+	implementation group: 'jakarta.servlet.jsp.jstl', name: 'jakarta.servlet.jsp.jstl-api', version: '3.0.0'
+   
 }
 
 tasks.named('bootBuildImage') {
@@ -53,4 +54,4 @@ tasks.named('bootBuildImage') {
 
 tasks.named('test') {
 	useJUnitPlatform()
-}
+}  
